--- a/ejsDemo/views/about.ejs
+++ b/ejsDemo/views/about.ejs
@@ -1,5 +1,4 @@
 <%- include("partials/header") %>
-    <%- include("partials/navbar") %>
+    <%- include("./partials/navbar") %>
     <h1>This is About Page</h1>
-</body>
-</html>
+<%- include('partials/footer') %>
