--- a/ejsDemo/views/contact.ejs
+++ b/ejsDemo/views/contact.ejs
@@ -1,6 +1,6 @@
-<%- include("./partials/header") %>
+<%- include("partials/header") %>
 
-    <%- include("./partials/navbar") %>
+    <%- include("partials/navbar") %>
     <h1>This is Contact Page</h1>
     
-<%- include(",.partials/footer") %>
+<%- include("partials/footer") %>
